# Food-Allergen-Free-Recipe-Recommender

./: .gitignore  README.md  app.py  caloric_utils.py  db.py  nosql.py  project_sql_script_300625.sql  pyproject.toml  recipe_filter.py  test_caloric_utils.py
app/: app.py  caloric_utils.py
app/static/css/: style.css
app/templates/: allergies.html  base.html  dashboard.html  delete_account.html  edit_review.html  homepage.html  menu.html  profile.html  recipe_detail.html
data/: filtered_recipe.csv  recipes_final_v3.csv  sample_reviews.csv
db/loadDB/: nosqlETL.py
db/nosql/: nosql.py
db/sql/: db.py  initDB.py  project_sql_script_300625.sql
src/data/: filtered_recipe_ai.csv  filtered_recipe_raw.csv  recipe_filter.py  recipe_filter2.py  recipes_final.csv
src/scripts/: nosql.py
templates/: allergies.html  edit_profile.html  edit_review.html  homepage.html  login.html  profile.html  recipe_detail.html  register.html
