[project]
name = "food-allergen-free-recipe-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pymongo>=4.13.2",
    "spacy>=3.8.7",
]

[project.scripts]
ui = "app.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]